--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "axios": "^1.6.7",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
